<?xml version="1.0"?>
<package format="2">
  <name>city_driver</name>
  <version>0.0.0</version>
  <description>City driving package by RSS Team 14, made for the 2023 final challenge part B.</description>

  <maintainer email="todo@todo.todo">todo</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>visualization_msgs</depend>
</package>
